--- a/Happiness - Assignment 1 - CS 663 (Machine Learning).ipynb
+++ b/Happiness - Assignment 1 - CS 663 (Machine Learning).ipynb
@@ -21,7 +21,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/fq/nclhl23j55s570qj6dfkqgq80000gn/T/ipykernel_85241/2524237607.py:1: DeprecationWarning: \n",
+      "/var/folders/fq/nclhl23j55s570qj6dfkqgq80000gn/T/ipykernel_86141/2524237607.py:1: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -1081,7 +1081,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x127b26000>"
+       "<seaborn.axisgrid.PairGrid at 0x12f679df0>"
       ]
      },
      "execution_count": 10,
@@ -1747,7 +1747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "29a39fb1-98bd-4225-ba56-0b82122d5866",
    "metadata": {},
    "outputs": [
@@ -1762,7 +1762,7 @@
    ],
    "source": [
     "\n",
-    "# Find the difference in Life Ladder from the first year to 2023\n",
+    "# Find the difference in Life Ladder from the first year to 2022\n",
     "df['HappinessIncrease'] = df.groupby('Country name')['Life Ladder'].transform(lambda x: x.iloc[-1] - x.iloc[0])\n",
     "\n",
     "# Create a new DataFrame with only 'Country name' and 'HappinessIncrease'\n",
@@ -1784,7 +1784,7 @@
    "id": "48c7b8ba-f603-41c6-b8a0-14bc0d864c6d",
    "metadata": {},
    "source": [
-    "#### Question 3) Of the countries in this dataset, which country had the largest increase in happiness from its start of participation to 2023? Which had the largest decrease in happiness?\n",
+    "#### Question 3) Of the countries in this dataset, which country had the largest increase in happiness from its start of participation to 2022? Which had the largest decrease in happiness?\n",
     "#### Answer 3.) \n",
     "* The country with the largest increase in happiness is: Congo (Brazzaville)\n",
     "* The country with the minimum increase in happiness is: Lebanon"
